BARC UAT/src/objects/Survey_Member__c.object
<CustomObject>
    <fields>
        <fullName>Access_to_internet__c</fullName>
        <label>Access to internet</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age (Completed Years)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_House_Ownership_status__c</fullName>
        <inlineHelpText>What best describes the ownership of this house?</inlineHelpText>
        <label>Current House Ownership status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ownership</fullName>
                </value>
                <value>
                    <fullName>Rented</fullName>
                </value>
                <value>
                    <fullName>Provided by Employer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Occupation__c</fullName>
        <inlineHelpText>Kindly Select the Occupation (Select the appropriate one)</inlineHelpText>
        <label>Current Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Working</fullName>
                </value>
                <value>
                    <fullName>Small Scale Traders</fullName>
                </value>
                <value>
                    <fullName>Worker - with no professional training / laborer</fullName>
                </value>
                <value>
                    <fullName>Worker-with professional training/ skill set</fullName>
                </value>
                <value>
                    <fullName>Shop Owners</fullName>
                </value>
                <value>
                    <fullName>Businessman/Industrialist with no employees</fullName>
                </value>
                <value>
                    <fullName>Businessman/Industrialist with 1-9 employees</fullName>
                </value>
                <value>
                    <fullName>Businessman/Industrialist with more than 10 employees</fullName>
                </value>
                <value>
                    <fullName>Self-employed professional</fullName>
                </value>
                <value>
                    <fullName>Clerk/Salesman</fullName>
                </value>
                <value>
                    <fullName>Supervisory level</fullName>
                </value>
                <value>
                    <fullName>Officer/Executive-Junior</fullName>
                </value>
                <value>
                    <fullName>Officer/Executive-Middle/Senior</fullName>
                </value>
                <value>
                    <fullName>Farmer and landowner of the same farming land</fullName>
                </value>
                <value>
                    <fullName>Farmer- on contract basis/ working on someone else</fullName>
                </value>
                <value>
                    <fullName>Agricultural worker</fullName>
                </value>
                <value>
                    <fullName>Owner of livestock</fullName>
                </value>
                <value>
                    <fullName>Owner of fisheries</fullName>
                </value>
                <value>
                    <fullName>Owner of poultry</fullName>
                </value>
                <value>
                    <fullName>Artisan / Skilled/ trained labor</fullName>
                </value>
                <value>
                    <fullName>Postman</fullName>
                </value>
                <value>
                    <fullName>Teacher</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Service (Staying in one village and working in   another village)</fullName>
                </value>
                <value>
                    <fullName>Service (Staying in one village and working in  City/town)</fullName>
                </value>
                <value>
                    <fullName>Farmer- on contract basis/ working on someone else’s farm</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker_for_buying_groceries__c</fullName>
        <inlineHelpText>In the above list of members, who takes all the decisions for purchasing daily grocery at your residence?</inlineHelpText>
        <label>Decision Maker for buying groceries</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Education_Qualification__c</fullName>
        <inlineHelpText>Select the educational qualification for Member (Select the appropriate one)</inlineHelpText>
        <label>Education Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cannot Read/Write</fullName>
                </value>
                <value>
                    <fullName>Can Read / Write but no formal schooling</fullName>
                </value>
                <value>
                    <fullName>School - Up to 4th standard</fullName>
                </value>
                <value>
                    <fullName>5th - 9th standard</fullName>
                </value>
                <value>
                    <fullName>SSC/HSC(10th - 12th)</fullName>
                </value>
                <value>
                    <fullName>Some College (incl. diploma but not Graduate)</fullName>
                </value>
                <value>
                    <fullName>Graduate–General (B.A., B.Sc., B.Com.)</fullName>
                </value>
                <value>
                    <fullName>Graduate–Professional (B.E., M.B.B.S., B.Tech)</fullName>
                </value>
                <value>
                    <fullName>Post-Graduate-General (M.A., M.Sc., M.Com, M.Phil, PhD)</fullName>
                </value>
                <value>
                    <fullName>Post-Graduate-Professional (M.E., M.Tech., MBA, etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Highest_household_contributer__c</fullName>
        <inlineHelpText>In the above list of members,who amongst all the member living at your residence contributes the most to household expenditure?</inlineHelpText>
        <label>Highest household contributer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Spoken_amongst_Family__c</fullName>
        <inlineHelpText>when speaking amongst the family members, which all languages are spoken? (Select Multiple Option)</inlineHelpText>
        <label>Language Spoken amongst Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lang_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Common_lang_amongst_family_member__c</fullName>
        <inlineHelpText>Which is the most often spoken language among your family members?</inlineHelpText>
        <label>Most Common lang amongst family member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lang_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Member</relationshipLabel>
        <relationshipName>Survey_Member</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Room_in_House_Except_Kitc_WC__c</fullName>
        <inlineHelpText>In all, how many rooms are there (including kitchen but excluding toilets) for your household’s use?</inlineHelpText>
        <label>Total Room in House(Except Kitc &amp; WC)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>10+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_members_living_currently__c</fullName>
        <inlineHelpText>How many members reside at your home, including yourself? (Please include friends, room-mates who live with you full-time)</inlineHelpText>
        <label>Total members living currently</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_is_Respondant__c</fullName>
        <inlineHelpText>In the above list of members, who is the respondent?</inlineHelpText>
        <label>Who is Respondant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_status_of_member__c</fullName>
        <inlineHelpText>Select the Working Status for Member (Select the appropriate one)</inlineHelpText>
        <label>Work status of member</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Working</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Working part-time</fullName>
                </value>
                <value>
                    <fullName>Working full time</fullName>
                </value>
                <value>
                    <fullName>Studying in school / College Student &amp; Working part-time</fullName>
                </value>
                <value>
                    <fullName>Studying in school / College Student &amp; Working full time</fullName>
                </value>
                <value>
                    <fullName>Full/Time</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Part/Time</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Your_Native_Language__c</fullName>
        <inlineHelpText>What is your mother tongue? By mother tongue I mean the language your mother first spoke to you in when you were born. (Select the language one)</inlineHelpText>
        <label>Your Native Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lang_List</valueSetName>
        </valueSet>
    </fields>
    <label>Survey Member</label>
    <nameField>
        <displayFormat>SM-{0}</displayFormat>
        <label>Survey Member No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Member</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>